# cmgui

./: CHANGELOG  CHANGELOG.txt  CMakeLists.txt  COPYRIGHT.txt  README.md  README.txt
cmake/: ConfigureVersion.cmake  FindwxWidgets.cmake  FunctionDefinitions.cmake  MacInstallerWelcome.txt  windatetime.bat
source/: cmgui.cpp  cmgui.def  cmgui.exports
source/api/: cmiss_element.h  cmiss_fdio.h  cmiss_field.h  cmiss_field_constant.h  cmiss_idle.h  cmiss_interactive_tool.h  cmiss_node.h  cmiss_optimisation.h  cmiss_selection.h  cmiss_time.h
source/cad/: cad_tool.cpp  cad_tool.h
source/choose/: choose_class.hpp  choose_enumerator_class.hpp  choose_list_class.hpp  choose_listbox_class.hpp  choose_manager_class.hpp  choose_manager_listbox_class.hpp  text_FE_choose_class.hpp  text_choose_from_fe_element.hpp
source/cmake/: api_source_files.cmake  app_hdrs.cmake  app_srcs.cmake  misc_source_files.cmake  xrc_source_files.cmake
source/colour/: colour_editor_wx.cpp  colour_editor_wx.hpp
source/comfile/: comfile.cpp  comfile.h  comfile_window_wx.cpp  comfile_window_wx.h  comfile_window_wx.hpp
source/command/: cmiss.cpp  cmiss.h  command.cpp  command.h  command_window.cpp  command_window.h  command_window.xrc  console.c  console.cpp  console.h  example_path.cpp  example_path.h  parser.cpp  parser.h
source/computed_field/: computed_field.cpp  computed_field_alias_app.cpp  computed_field_alias_app.h  computed_field_app.cpp  computed_field_app.h  computed_field_apply_app.cpp  computed_field_apply_app.h  computed_field_arithmetic_operators_app.cpp  computed_field_arithmetic_operators_app.h  computed_field_compose_app.cpp  computed_field_compose_app.h  computed_field_composite_app.cpp  computed_field_composite_app.h  computed_field_conditional.cpp  computed_field_conditional_app.cpp  computed_field_conditional_app.h  computed_field_coordinate_app.cpp  computed_field_coordinate_app.h  computed_field_curve_app.cpp  computed_field_curve_app.h  computed_field_deformation_app.cpp  computed_field_deformation_app.h  computed_field_derivatives_app.cpp  computed_field_derivatives_app.h  computed_field_fibres_app.cpp  computed_field_fibres_app.h  computed_field_finite_element_app.cpp  computed_field_finite_element_app.h  computed_field_format_output_app.cpp  computed_field_format_output_app.h  computed_field_function_app.cpp  computed_field_function_app.h  computed_field_image_app.cpp  computed_field_image_app.h  computed_field_integration_app.cpp  computed_field_integration_app.h  computed_field_logical_operators_app.cpp  computed_field_logical_operators_app.h  computed_field_lookup.cpp  computed_field_lookup_app.cpp  (+24 more)
source/configure/: cmgui_configure.h.cmake  version.h.cmake
source/context/: context.cpp  context_app.cpp  context_app.h  user_interface_module.cpp  user_interface_module.h
source/curve/: curve_app.cpp  curve_app.h
source/dialog/: tessellation_dialog.cpp  tessellation_dialog.hpp
source/element/: element_point_tool.cpp  element_point_tool.h  element_point_viewer_wx.cpp  element_point_viewer_wx.h  element_tool.cpp  element_tool.h
source/emoter/: emoter_dialog.cpp  emoter_dialog.h
source/finite_element/: export_finite_element_app.cpp  export_finite_element_app.h  finite_element.cpp  finite_element_app.cpp  finite_element_app.h  finite_element_conversion_app.cpp  finite_element_conversion_app.h  finite_element_region_app.cpp  finite_element_region_app.h
source/general/: cmgui_time.cpp  cmgui_time.h  enumerator_app.h  enumerator_private_app.h  geometry_app.cpp  geometry_app.h  multi_range_app.cpp  multi_range_app.h
source/graphics/: auxiliary_graphics_types_app.cpp  auxiliary_graphics_types_app.h  colour_app.cpp  colour_app.h  element_point_ranges_app.cpp  element_point_ranges_app.h  environment_map_app.cpp  environment_map_app.h  font_app.cpp  font_app.h  glyph_app.cpp  glyph_app.h  graphic_app.cpp  graphic_app.h  graphics_app.cpp  graphics_app.h  graphics_filter.hpp  graphics_filter_app.cpp  graphics_filter_app.hpp  graphics_font_app.cpp  graphics_window.cpp  graphics_window.h  graphics_window.xrc  graphics_window_private.hpp  light_app.cpp  light_app.h  light_model_app.cpp  light_model_app.h  material_app.cpp  material_app.h  quaternion.cpp  quaternion.hpp  region_tree_viewer_wx.cpp  region_tree_viewer_wx.h  region_tree_viewer_wx.xrc  render_to_finite_elements_app.cpp  render_to_finite_elements_app.h  rendition_app.cpp  rendition_app.h  scene_app.cpp  (+22 more)
source/icon/: cmiss_torso.icns
source/image_processing/: computed_field_ImageFilter.hpp  computed_field_binary_dilate_image_filter_app.cpp  computed_field_binary_dilate_image_filter_app.h  computed_field_binary_erode_image_filter_app.cpp  computed_field_binary_erode_image_filter_app.h  computed_field_binary_threshold_image_filter_app.cpp  computed_field_binary_threshold_image_filter_app.h  computed_field_canny_edge_detection_filter_app.cpp  computed_field_canny_edge_detection_filter_app.h  computed_field_connected_threshold_image_filter_app.cpp  computed_field_connected_threshold_image_filter_app.h  computed_field_curvature_anisotropic_diffusion_image_filter_app.cpp  computed_field_curvature_anisotropic_diffusion_image_filter_app.h  computed_field_derivative_image_filter_app.cpp  computed_field_derivative_image_filter_app.h  computed_field_discrete_gaussian_image_filter_app.cpp  computed_field_discrete_gaussian_image_filter_app.h  computed_field_fast_marching_image_filter_app.cpp  computed_field_fast_marching_image_filter_app.h  computed_field_gradient_magnitude_recursive_gaussian_image_filter_app.cpp  computed_field_gradient_magnitude_recursive_gaussian_image_filter_app.h  computed_field_histogram_image_filter_app.cpp  computed_field_histogram_image_filter_app.h  computed_field_image_resample_app.cpp  computed_field_image_resample_app.h  computed_field_mean_image_filter_app.cpp  computed_field_mean_image_filter_app.h  computed_field_rescale_intensity_image_filter_app.cpp  computed_field_rescale_intensity_image_filter_app.h  computed_field_sigmoid_image_filter_app.cpp  computed_field_sigmoid_image_filter_app.h  (+2 more)
(+46 files in other folders)
